--- a/register.html
+++ b/register.html
@@ -560,7 +560,7 @@
       </div>
       <p style="margin-top:-0.5rem; margin-bottom:1rem; font-weight:600; color:#c82333;">
   Please note: We are only serving combo deals currently. <br><br>
-  Full customer name is not necessary, first name is acceptable. This is for future loyalty program plans and keeping track of orders.
+  Full customer name is not necessary, first name is acceptable. This is for future loyalty program plans and keeping track of orders when on shift.
 </p>
       <div class="item-grid">
   <!-- Combo: Bleeder Box -->
@@ -586,75 +586,6 @@
     <img src="assets/images/bleederbox.png" alt="Heart Stopper Meal" />
     <h3>Heart Stopper Meal</h3>
     <p>$2000</p>
-    <div class="add-controls">
-      <input type="number" class="quantity-input" min="1" value="1" />
-      <button class="add-btn">Add</button>
-    </div>
-  </div>
-  <!-- Burgershot Bleeder -->
-  <div class="item-card" data-name="Burgershot Bleeder" data-price="85" data-category="Food" data-image="assets/images/bleeder.png">
-    <img src="assets/images/bleeder.png" alt="Burgershot Bleeder" />
-    <h3>Burgershot Bleeder</h3>
-    <p>$100</p>
-    <div class="add-controls">
-      <input type="number" class="quantity-input" min="1" value="1" />
-      <button class="add-btn">Add</button>
-    </div>
-  </div>
-  <!-- The Double Shot -->
-  <div class="item-card" data-name="The Double Shot" data-price="85" data-category="Food" data-image="assets/images/doubleshot.png">
-    <img src="assets/images/doubleshot.png" alt="The Double Shot" />
-    <h3>The Double Shot</h3>
-    <p>$100</p>
-    <div class="add-controls">
-      <input type="number" class="quantity-input" min="1" value="1" />
-      <button class="add-btn">Add</button>
-    </div>
-    </div>
-    <div class="item-card" data-name="Heart Stopper Burger" data-price="150" data-category="Food" data-image="assets/images/bleeder.png">
-    <img src="assets/images/heartstopper.png" alt="Heart Stopper Burger" />
-    <h3>Heart Stopper Burger</h3>
-    <p>$150</p>
-    <div class="add-controls">
-      <input type="number" class="quantity-input" min="1" value="1" />
-      <button class="add-btn">Add</button>
-    </div>
-  </div>
-  <!-- Burgershot Soda -->
-  <div class="item-card" data-name="Burgershot Soda" data-price="50" data-category="Drinks" data-image="assets/images/soda.png">
-    <img src="assets/images/soda.png" alt="Burgershot Soda" />
-    <h3>Burgershot Soda</h3>
-    <p>$75</p>
-    <div class="add-controls">
-      <input type="number" class="quantity-input" min="1" value="1" />
-      <button class="add-btn">Add</button>
-    </div>
-  </div>
-  <!-- Fries -->
-  <div class="item-card" data-name="Fries" data-price="85" data-category="Food" data-image="assets/images/fries.png">
-    <img src="assets/images/fries.png" alt="Fries" />
-    <h3>Fries</h3>
-    <p>$85</p>
-    <div class="add-controls">
-      <input type="number" class="quantity-input" min="1" value="1" />
-      <button class="add-btn">Add</button>
-    </div>
-  </div>
-  <!-- Rim Job -->
-  <div class="item-card" data-name="Rim Job" data-price="75" data-category="Desserts" data-image="assets/images/rimjob.png">
-    <img src="assets/images/rimjob.png" alt="Rim Job" />
-    <h3>Rim Job</h3>
-    <p>$65</p>
-    <div class="add-controls">
-      <input type="number" class="quantity-input" min="1" value="1" />
-      <button class="add-btn">Add</button>
-    </div>
-  </div>
-  <!-- Cream Pie -->
-  <div class="item-card" data-name="Cream Pie" data-price="75" data-category="Desserts" data-image="assets/images/creampie.png">
-    <img src="assets/images/creampie.png" alt="Cream Pie" />
-    <h3>Cream Pie</h3>
-    <p>$65</p>
     <div class="add-controls">
       <input type="number" class="quantity-input" min="1" value="1" />
       <button class="add-btn">Add</button>
