--- a/register.html
+++ b/register.html
@@ -591,6 +591,26 @@
       <button class="add-btn">Add</button>
     </div>
   </div>
+   <!-- Rim Job -->
+  <div class="item-card" data-name="Rim Job" data-price="85" data-category="Desserts" data-image="assets/images/rimjob.png">
+    <img src="assets/images/rimjob.png" alt="Rim Job" />
+    <h3>Rim Job</h3>
+    <p>$85</p>
+    <div class="add-controls">
+      <input type="number" class="quantity-input" min="1" value="1" />
+      <button class="add-btn">Add</button>
+    </div>
+  </div>
+  <!-- Cream Pie -->
+  <div class="item-card" data-name="Cream Pie" data-price="85" data-category="Desserts" data-image="assets/images/creampie.png">
+    <img src="assets/images/creampie.png" alt="Cream Pie" />
+    <h3>Cream Pie</h3>
+    <p>$85</p>
+    <div class="add-controls">
+      <input type="number" class="quantity-input" min="1" value="1" />
+      <button class="add-btn">Add</button>
+    </div>
+  </div>
 </div>
     </main>
     <aside class="order-summary">
