--- a/register.html
+++ b/register.html
@@ -560,7 +560,7 @@
       </div>
       <p style="margin-top:-0.5rem; margin-bottom:1rem; font-weight:600; color:#c82333;">
   Please note: We are only serving combo deals currently. <br><br>
-  Full customer name is not necessary, first name is acceptable. This is for future loyalty program plans and keeping track of orders when on shift.
+  Please use the customer's full name if you're using the register to invoice. This is for future loyalty program plans and keeping track of orders when on shift.
 </p>
       <div class="item-grid">
   <!-- Combo: Bleeder Box -->
