--- a/inventory.html
+++ b/inventory.html
@@ -570,6 +570,9 @@ function renderComboCounts(inventory) {
     <ul style="list-style:none; padding-left:0; margin:0;">
       ${comboEntries.join("")}
     </ul>
+    <p style="margin-top:0.75rem; color:#c82333; font-weight:600; font-size:0.9rem;">
+      ⚠️ Availability is shown per combo individually. Ingredients are shared, so making one combo reduces the availability of the others.
+    </p>
   `;
 }
 
