--- a/register.html
+++ b/register.html
@@ -628,6 +628,7 @@
     <option value="Stu">Stu</option>
     <option value="Tyrod">Tyrod</option>
     <option value="James">James</option>
+    <option value="Chubbs">Chubbs</option>
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
