--- a/register.html
+++ b/register.html
@@ -641,6 +641,7 @@
       <div data-value="Stu">Stu</div>
       <div data-value="Tyrod">Tyrod</div>
       <div data-value="James">James</div>
+      <div data-value="Chubbs">Chubbs</div>
     </div>
   </div>
 </div>
