--- a/register.html
+++ b/register.html
@@ -629,6 +629,8 @@
     <option value="Tyrod">Tyrod</option>
     <option value="James">James</option>
     <option value="Chubbs">Chubbs</option>
+    <option value="Nicole">Nicole</option>
+    <option value="Moe">Moe</option>
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
@@ -641,7 +643,8 @@
       <div data-value="Stu">Stu</div>
       <div data-value="Tyrod">Tyrod</div>
       <div data-value="James">James</div>
-      <div data-value="Chubbs">Chubbs</div>
+      <div data-value="Nicole">Nicole</div>
+      <div data-value="Moe">Moe</div>
     </div>
   </div>
 </div>
