--- a/staffmeals.html
+++ b/staffmeals.html
@@ -352,7 +352,8 @@ select option:hover {
           <option value="Stu">Stu</option>
           <option value="Tyrod">Tyrod</option>
           <option value="James">James</option>
-          <option value="Chubbs">Chubbs</option>
+          <option value="Nicole">Nicole</option>
+          <option value="Moe">Moe</option>
         </select>
       </div>
 
