--- a/register.html
+++ b/register.html
@@ -643,6 +643,7 @@
       <div data-value="Stu">Stu</div>
       <div data-value="Tyrod">Tyrod</div>
       <div data-value="James">James</div>
+      <div data-value="Chubbs">Chubbs</div>
       <div data-value="Nicole">Nicole</div>
       <div data-value="Moe">Moe</div>
     </div>
