rip burger shot

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="login-body">
   <div class="login-container">
-    <h1>🍔 Burger Shot</h1>
+    <h1>🍔 Snr. Buns</h1>
     <h2>Staff Login</h2>
 
     <form id="loginForm">
