--- a/orders_view.html
+++ b/orders_view.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Burger Shot - Orders View</title>
+  <title>Snr. Buns - Orders View</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
     body {
@@ -55,7 +55,7 @@
   </style>
 </head>
 <body>
-  <h1>🍔 Burger Shot - All Orders</h1>
+  <h1>🍔 Snr. Buns - All Orders</h1>
 
   <button id="downloadCSV">⬇️ Download Orders CSV</button>
 
