--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Burger Shot - Home</title>
+  <title>Snr. Buns - Home</title>
 
   <!-- Bootstrap CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -30,12 +30,17 @@
       flex-shrink: 0;
     }
     .sidebar h2 {
-      font-weight: 700;
-      font-size: 1.8rem;
-      margin-bottom: 2rem;
-      text-align: center;
-      user-select: none;
-    }
+  font-weight: 700;
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
+  user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.4rem;
+  white-space: nowrap;   /* ✅ prevents wrapping */
+}
+
     .sidebar a {
       color: white;
       text-decoration: none;
@@ -231,7 +236,7 @@
 .hamburger {
   display: none;
   font-size: 2rem;
-  background: #c82333;    /* give it the Burger Shot red */
+  background: #c82333;
   color: white;
   border: none;
   border-radius: 8px;     /* matches other buttons */
@@ -292,7 +297,7 @@
   <button id="menuToggle" class="hamburger">☰</button>
   <div class="main-container" style="display:flex; width:100%; min-height:100vh;">
     <aside class="sidebar">
-      <h2>🍔 Burger Shot</h2>
+      <h2>🍔 Snr. Buns</h2>
       <nav>
         <ul class="list-unstyled">
           <li><a href="home.html" class="active">🏠 Home</a></li>
@@ -311,7 +316,7 @@
       <div class="announcement-banner" aria-live="polite" aria-atomic="true">
   <span>
     🚨 Grand Opening soon! 🍔🔥 &nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp; 
-    🚫 Tyrod stop spitting in the burgers. &nbsp;&nbsp;|&nbsp;&nbsp;
+    💔 RIP Burger Shot 💔 &nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp; 
     ✅ Remember to clock in/out at start of shift and end of shift! &nbsp;&nbsp;|&nbsp;&nbsp;
     ⏰ Clock in and out on emails for weekly bonuses &nbsp;&nbsp;|&nbsp;&nbsp;
     💸 Double-check invoices before sending &nbsp;&nbsp;|&nbsp;&nbsp;
@@ -321,7 +326,7 @@
 </div>
 
       <header class="welcome">
-        <h1>🍔 Welcome to Burger Shot!</h1>
+        <h1>🍔 Welcome to Snr. Buns!</h1>
         <p>Your quick overview & stats dashboard</p>
 
         <p style="margin-top:-0.5rem; margin-bottom:1rem; font-weight:600; color:#c82333;">
