--- a/loyalty.html
+++ b/loyalty.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Burger Shot - Customers</title>
+  <title>Snr. Bunst - Customers</title>
 
   <!-- Bootstrap CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -30,12 +30,17 @@
       flex-shrink: 0;
     }
     .sidebar h2 {
-      font-weight: 700;
-      font-size: 1.8rem;
-      margin-bottom: 2rem;
-      text-align: center;
-      user-select: none;
-    }
+  font-weight: 700;
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
+  user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.4rem;
+  white-space: nowrap;   /* ✅ prevents wrapping */
+}
+
     .sidebar a {
       color: white;
       text-decoration: none;
@@ -168,7 +173,7 @@
 /* Leaderboard special card */
 .leaderboard-card {
   background: #fff; 
-  border: 2px solid #c82333; /* Burger Shot red */
+  border: 2px solid #c82333;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.12);
   padding: 1rem 1.5rem;
@@ -198,7 +203,7 @@
 
 /* Optional subtle highlight for ranks */
 .leaderboard-card p:nth-child(2) strong {
-  color: #c82333; /* Burger Shot red for #1 */
+  color: #c82333;
 }
 .leaderboard-card p:nth-child(3) strong {
   color: #a71d2a; /* darker red for #2 */
@@ -211,7 +216,7 @@
 .hamburger {
   display: none;
   font-size: 2rem;
-  background: #c82333;    /* give it the Burger Shot red */
+  background: #c82333;
   color: white;
   border: none;
   border-radius: 8px;     /* matches other buttons */
@@ -272,7 +277,7 @@
   <div class="main-container" style="display:flex; width:100%; min-height:100vh;">
     <!-- Sidebar -->
     <aside class="sidebar">
-      <h2>🍔 Burger Shot</h2>
+      <h2>🍔 Snr. Buns</h2>
       <nav>
         <ul class="list-unstyled">
           <li><a href="home.html">🏠 Home</a></li>
