--- a/market.html
+++ b/market.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Burger Shot - Market Run</title>
+  <title>Snr. Buns - Market Run</title>
 
   <!-- Bootstrap CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -30,12 +30,17 @@
       flex-shrink: 0;
     }
     .sidebar h2 {
-      font-weight: 700;
-      font-size: 1.8rem;
-      margin-bottom: 2rem;
-      text-align: center;
-      user-select: none;
-    }
+  font-weight: 700;
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
+  user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.4rem;
+  white-space: nowrap;   /* ✅ prevents wrapping */
+}
+
     .sidebar a {
       color: white;
       text-decoration: none;
@@ -148,7 +153,7 @@
 .hamburger {
   display: none;
   font-size: 2rem;
-  background: #c82333;    /* give it the Burger Shot red */
+  background: #c82333;
   color: white;
   border: none;
   border-radius: 8px;     /* matches other buttons */
@@ -203,7 +208,7 @@
   <button id="menuToggle" class="hamburger">☰</button>
   <div class="main-container" style="display:flex; width:100%; min-height:100vh;">
   <aside class="sidebar">
-    <h2>🍔 Burger Shot</h2>
+    <h2>🍔 Snr. Buns</h2>
     <nav>
       <ul class="list-unstyled">
         <li><a href="home.html">🏠 Home</a></li>
