--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Burger Shot - Register</title>
+  <title>Snr. Buns - Register</title>
   <!-- Bootstrap CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Google Fonts -->
@@ -27,12 +27,17 @@
       flex-shrink: 0;
     }
     .sidebar h2 {
-      font-weight: 700;
-      font-size: 1.8rem;
-      margin-bottom: 2rem;
-      text-align: center;
-      user-select: none;
-    }
+  font-weight: 700;
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
+  user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.4rem;
+  white-space: nowrap;   /* ✅ prevents wrapping */
+}
+
     .sidebar a {
       color: white;
       text-decoration: none;
@@ -205,7 +210,7 @@
   padding: 0.75rem 1rem;
   margin-top: 0.4rem;
   border-radius: 10px;
-  border: 2px solid #c82333;   /* Burger Shot red */
+  border: 2px solid #c82333;
   background-color: #fff;
   font-weight: 700;
   font-size: 1rem;
@@ -486,7 +491,7 @@
 .hamburger {
   display: none;
   font-size: 2rem;
-  background: #c82333;    /* give it the Burger Shot red */
+  background: #c82333;
   color: white;
   border: none;
   border-radius: 8px;     /* matches other buttons */
@@ -536,7 +541,7 @@
   <button id="menuToggle" class="hamburger">☰</button>
   <div class="main-container" style="display:flex; width:100%; min-height:100vh;">
     <aside class="sidebar">
-      <h2>🍔 Burger Shot</h2>
+      <h2>🍔 Snr. Buns</h2>
       <nav>
         <ul class="list-unstyled">
           <li><a href="home.html">🏠 Home</a></li>
