--- a/staffmeals.html
+++ b/staffmeals.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Burger Shot - Staff Meals</title>
+  <title>Snr. Buns - Staff Meals</title>
 
   <!-- Bootstrap CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -29,13 +29,18 @@
       flex-direction: column;
       flex-shrink: 0;
     }
-    .sidebar h2 {
-      font-weight: 700;
-      font-size: 1.8rem;
-      margin-bottom: 2rem;
-      text-align: center;
-      user-select: none;
-    }
+   .sidebar h2 {
+  font-weight: 700;
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
+  user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.4rem;
+  white-space: nowrap;   /* ✅ prevents wrapping */
+}
+
     .sidebar a {
       color: white;
       text-decoration: none;
@@ -99,7 +104,7 @@
 
 .form-group select option:checked {
   background: #fff4d6; /* light yellow for selected option */
-  color: #c82333;      /* Burger Shot red */
+  color: #c82333;
 }
 
 
@@ -152,7 +157,7 @@ select option {
 /* Highlight when hovered */
 select option:hover {
   background-color: #fff4d6; /* light yellow background */
-  color: #c82333;            /* Burger Shot red text */
+  color: #c82333;
 }
 
 
@@ -200,7 +205,7 @@ select option:hover {
 .hamburger {
   display: none;
   font-size: 2rem;
-  background: #c82333;    /* give it the Burger Shot red */
+  background: #c82333;
   color: white;
   border: none;
   border-radius: 8px;     /* matches other buttons */
@@ -319,7 +324,7 @@ select option:hover {
 <button id="menuToggle" class="hamburger">☰</button>
   <div class="main-container" style="display:flex; width:100%; min-height:100vh;">
     <aside class="sidebar">
-      <h2>🍔 Burger Shot</h2>
+      <h2>🍔 Snr. Buns</h2>
       <nav>
         <ul class="list-unstyled">
           <li><a href="home.html">🏠 Home</a></li>
