--- a/register.html
+++ b/register.html
@@ -570,7 +570,7 @@
       <div class="item-grid">
   <!-- Combo: Bleeder Box -->
   <div class="item-card" data-name="The Bleeder Box" data-price="1500" data-category="Combo Deals" data-image="assets/images/bleederbox.png">
-    <img src="assets/images/bleederbox.png" alt="The Bleeder Box" />
+    <img src="assets/images/combo.png" alt="The Bleeder Box" />
     <h3>The Bleeder Box</h3>
     <p>$1500</p>
     <div class="add-controls">
@@ -579,7 +579,7 @@
     </div>
   </div>
   <div class="item-card" data-name="Patty Pounder Combo" data-price="750" data-category="Combo Deals" data-image="assets/images/bleederbox.png">
-    <img src="assets/images/bleederbox.png" alt="Patty Pounder Combo" />
+    <img src="assets/images/combo.png" alt="Patty Pounder Combo" />
     <h3>Patty Pounder Combo</h3>
     <p>$750</p>
     <div class="add-controls">
@@ -588,7 +588,7 @@
     </div>
   </div>
   <div class="item-card" data-name="Heart Stopper Meal" data-price="2000" data-category="Combo Deals" data-image="assets/images/bleederbox.png">
-    <img src="assets/images/bleederbox.png" alt="Heart Stopper Meal" />
+    <img src="assets/images/combo.png" alt="Heart Stopper Meal" />
     <h3>Heart Stopper Meal</h3>
     <p>$2000</p>
     <div class="add-controls">
