--- a/staffmeals.html
+++ b/staffmeals.html
@@ -11,6 +11,8 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet" />
 
+  <script type="module" src="auth.js"></script>
+
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
@@ -413,28 +415,12 @@ select option:hover {
 
 
   <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
   import {
-    getFirestore,
-    doc,
-    getDoc,
-    updateDoc,
-    collection,
-    addDoc
-  } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
+  getFirestore, collection, query, where, orderBy, updateDoc, doc, onSnapshot, getDoc, addDoc
+} from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyBgsHAYXZeLIv-vC0LCHbNHjOTrZOq3GBA",
-    authDomain: "burgershotorders.firebaseapp.com",
-    projectId: "burgershotorders",
-    storageBucket: "burgershotorders.appspot.com",
-    messagingSenderId: "244133569976",
-    appId: "1:244133569976:web:0dcca3439958188439db4d",
-    measurementId: "G-2X69N31D9Q"
-  };
-
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
+import { app } from "./auth.js"; // reuses the initialized app
+const db = getFirestore(app);
 
   const inventoryDocRef = doc(db, "inventory", "current");
   const staffMealsCollection = collection(db, "staff_meals");
