--- a/market.html
+++ b/market.html
@@ -331,7 +331,7 @@
 
 <script type="module">
 import {
-  getFirestore, collection, query, where, orderBy, updateDoc, doc, onSnapshot, getDoc, addDoc
+  getFirestore, collection, query, where, orderBy, updateDoc, doc, onSnapshot, getDoc, addDoc, setDoc
 } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
 
 import { app } from "./auth.js"; // reuses the initialized app
