--- a/staffmeals.html
+++ b/staffmeals.html
@@ -416,7 +416,7 @@ select option:hover {
 
   <script type="module">
   import {
-  getFirestore, collection, query, where, orderBy, updateDoc, doc, onSnapshot, getDoc, addDoc
+  getFirestore, collection, query, where, orderBy, updateDoc, doc, onSnapshot, getDoc, addDoc, setDoc
 } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
 
 import { app } from "./auth.js"; // reuses the initialized app
