--- a/register.html
+++ b/register.html
@@ -640,6 +640,8 @@
     <option value="James">James</option>
     <option value="Chubbs">Chubbs</option>
     <option value="Moe">Moe</option>
+    <option value="Oreo">Oreo</option>
+    <option value="Craggie">Craggie</option>
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
@@ -654,6 +656,8 @@
       <div data-value="James">James</div>
       <div data-value="Chubbs">Chubbs</div>
       <div data-value="Moe">Moe</div>
+      <div data-value="Oreo">Oreo</div>
+      <div data-value="Craggie">Craggie</div>
     </div>
   </div>
 </div>
