--- a/staffmeals.html
+++ b/staffmeals.html
@@ -361,6 +361,8 @@ select option:hover {
           <option value="James">James</option>
           <option value="Chubbs">Chubbs</option>
           <option value="Moe">Moe</option>
+          <option value="Oreo">Oreo</option>
+          <option value="Craggie">Craggie</option>
         </select>
       </div>
 
