--- a/register2.html
+++ b/register2.html
@@ -574,18 +574,18 @@
 </p>
       <div class="item-grid">
   <!-- Combos -->
-   <div class="item-card" data-name="Double Trouble Deal" data-price="1250" data-category="Combo Deals" data-image="assets/images/bleederbox.png">
-    <img src="assets/images/combo.png" alt="Double Trouble Deal" />
-    <h3>Double Trouble Deal</h3>
+   <div class="item-card" data-name="Grand Opening Combo 1" data-price="1250" data-category="Combo Deals" data-image="assets/images/bleederbox.png">
+    <img src="assets/images/combo.png" alt="Grand Opening Combo 1" />
+    <h3>Grand Opening Combo 1</h3>
     <p>$1250</p>
     <div class="add-controls">
       <input type="number" class="quantity-input" min="1" value="1" />
       <button class="add-btn">Add</button>
     </div>
   </div>
-  <div class="item-card" data-name="Crispy Junior Box" data-price="1000" data-category="Combo Deals" data-image="assets/images/bleederbox.png">
-    <img src="assets/images/combo.png" alt="Crispy Junior Box" />
-    <h3>Crispy Junior Box</h3>
+  <div class="item-card" data-name="Grand Opening Combo 2" data-price="1000" data-category="Combo Deals" data-image="assets/images/bleederbox.png">
+    <img src="assets/images/combo.png" alt="Grand Opening Combo 2" />
+    <h3>Grand Opening Combo 2</h3>
     <p>$1000</p>
     <div class="add-controls">
       <input type="number" class="quantity-input" min="1" value="1" />
@@ -754,7 +754,7 @@ const productIngredients = {
   "Burgershot Soda": { corn_syrup: 1 },
   "Coffee": {coffee_beans: 1},
   "Fries": { potato: 2 },
-  "Ice Cream": { ice_cream: 1, vanilla: 2 },
+  "Vanilla Soft Serve": { ice_cream: 1, vanilla: 2 },
   "Rim Job": { sugar: 1, flour: 1 },
   "Cream Pie": { sugar: 1, flour: 1 }
 };
